Подчистил OpenAPI-документацию и тестовое покрытие
